# berkeley-gorilla

./: .gitignore  pyproject.toml
berkeley-function-call-leaderboard/: eval-bfcl.sh  eval.sh  function_credential_config.json  openfunctions_evaluation.py  post-process-results.ipynb  run-bfcl.sh  run-eval.sh  run.sh  score-eval.sh
berkeley-function-call-leaderboard/baml/: .gitignore  README.md  eval.ipynb  eval.py  example.ipynb  generate_code.py  run.sh  run_baml_event_logger.py  template-function-call.baml.j2  template-function-call2.baml.j2  template-test.py.j2
berkeley-function-call-leaderboard/baml/baml_src/: clients.baml
berkeley-function-call-leaderboard/baml_src/: clients.baml  functions.baml
berkeley-function-call-leaderboard/data/possible_answer/: gorilla_openfunctions_v1_test_parallel_multiple_function.json
berkeley-function-call-leaderboard/eval_checker/: checker.py  eval_runner.py  eval_runner_helper.py
berkeley-function-call-leaderboard/model_handler/: baml_handler.py  claude_fc_handler.py  claude_prompt_handler.py  constant.py  gpt_handler.py  handler.py  handler_map.py  java_parser.py  js_parser.py  mistral_handler.py  utils.py
berkeley-function-call-leaderboard/result/claude-3-haiku-20240307/: gorilla_openfunctions_v1_test_multiple_function_result.json  gorilla_openfunctions_v1_test_parallel_function_result.json  gorilla_openfunctions_v1_test_parallel_multiple_function_result.json  gorilla_openfunctions_v1_test_simple_result.json
berkeley-function-call-leaderboard/score/: data.csv
goex/: requirements.txt
inference/: requirements.txt
(+57 files in other folders)
