[tool.poetry]
name = "gorilla"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.34.0"
anthropic = "^0.28.1"
baml-py = "^0.40.0"
jinja2 = "^3.1.4"
termcolor = "^2.4.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
jupyterlab = "^4.2.2"
numpy = "^2.0.0"
notebook = "^7.2.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
